feat: daemon local + SDK TypeScript
